--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "whale",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^20.17.6",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
